--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -35,10 +35,26 @@
         <img src="static/img/finto-ai-logo-vaaka.svg" class="img" alt="Finto AI">
       </h1>
       <div id="header-nav">
-        <span><a :href="$t('finto_url')" class="header-nav-link" id="header-nav-finto">Finto.fi</a></span>
-        <span><a :href="$t('about_url')" class="header-nav-link" id="header-nav-about">{{ $t('header_nav_about') }}</a></span>
-        <span><a :href="$t('feedback_url')" class="header-nav-link" id="header-nav-feedback">{{ $t('header_nav_feedback') }}</a></span>
-        <span><a :href="$t('guide_url')" class="header-nav-link" id="header-nav-guide">{{ $t('header_nav_guide') }}</a></span>
+        <span>
+          <a class="header-nav-link" id="header-nav-finto"
+            :href="$t('finto_url')"
+          >Finto.fi</a>
+        </span>
+        <span>
+          <a class="header-nav-link" id="header-nav-about"
+            :href="$t('about_url')"
+          >{{ $t('header_nav_about') }}</a>
+        </span>
+        <span>
+          <a class="header-nav-link" id="header-nav-feedback"
+            :href="$t('feedback_url')"
+          >{{ $t('header_nav_feedback') }}</a>
+        </span>
+        <span>
+          <a class="header-nav-link" id="header-nav-guide"
+            :href="$t('guide_url')"
+          >{{ $t('header_nav_guide') }}</a>
+        </span>
         <span> | </span>
         <switch-locale></switch-locale>
       </div>
@@ -106,13 +122,20 @@
             @dragover="drag_over($event)"
           >
             <text-input
-              v-model="text" :show_dragging_effect="show_dragging_effect" :placeholder_to_show="placeholder_to_show" @clear="clear()"
+              v-model="text"
+              :show_dragging_effect="show_dragging_effect"
+              :placeholder_to_show="placeholder_to_show"
+              @clear="clear()"
             ></text-input>
-            <div id="text-box-background" class="dropzone" v-show="!loading_upload && text.length === 0">
+            <div id="text-box-background" class="dropzone"
+              v-show="!loading_upload && text.length === 0"
+            >
               <img src="static/img/drop-a-file.svg" class="img" alt="" width="50" id="upload-icon" aria-hidden="true">
               <span>{{ $t('text_box_background') }}</span>
             </div>
-            <div id="upload-spinner" class="spinner-border" role="status" v-if="loading_upload" v-cloak>
+            <div id="upload-spinner" class="spinner-border" role="status" v-cloak
+              v-if="loading_upload"
+            >
               <span class="visually-hidden">{{ $t('text_box_background') }}</span>
             </div>
           </div>
@@ -129,23 +152,30 @@
 
           <div class="d-grid justify-content-end">
             <button id="get-suggestions" type="button" class="btn btn-primary"
-              @click="suggest()" :disabled="text===''"
+              @click="suggest()"
+              :disabled="text===''"
             >{{ $t('get_suggestions') }}</button>
           </div>
 
-          <div class="d-flex justify-content-center" id="results-spinner" v-if="loading_results" v-cloak>
+          <div class="d-flex justify-content-center" id="results-spinner" v-cloak
+            v-if="loading_results"
+          >
             <div class="spinner-border" role="status">
               <span class="visually-hidden">{{ $t('loading') }}</span>
             </div>
           </div>
 
-          <div id="suggestions-wrapper" v-if="show_results" v-cloak>
+          <div id="suggestions-wrapper" v-cloak
+            v-if="show_results"
+          >
             <span id="suggestions-heading">{{ $t('suggestions_heading') }}</span>
             <span id="copy-heading">{{ $t('copy_heading') }}</span>
 
             <result-list
-              :results="results" :language="language"
-              :selected_project="selected_project" :projects="projects"
+              :results="results"
+              :language="language"
+              :selected_project="selected_project"
+              :projects="projects"
             ></result-list>
           </div>
 
@@ -175,7 +205,9 @@
           <h5>{{ $t('api_heading') }}</h5>
           <p>{{ $t('api_description') }}</p>
           <p>
-            <a class="footer-info-link" :href="$t('api_info_link_url')">{{ $t('api_info_link') }}</a>
+            <a class="footer-info-link"
+              :href="$t('api_info_link_url')"
+            >{{ $t('api_info_link') }}</a>
             <span> | </span>
             <a class="footer-info-link" href="v1/ui/">{{ $t('api_description_link') }}</a>
           </p>
@@ -223,23 +255,33 @@
           <h5 class="footer-follow-heading">{{ $t('footer_follow_heading_finto') }}</h5>
           <ul class="list-group footer-list">
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="twitter"><a href="https://twitter.com/Fintopalvelu/">{{ $t('footer_twitter_link') }}</a></span>
+              <span class="footer-follow-icon" id="twitter">
+                <a href="https://twitter.com/Fintopalvelu/">{{ $t('footer_twitter_link') }}</a>
+              </span>
             </li>
           </ul>
 
           <h5 class="footer-follow-heading">{{ $t('footer_follow_heading_natlib') }}</h5>
           <ul class="list-group footer-list">
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="facebook"><a href="https://www.facebook.com/Kansalliskirjasto/">Facebook</a></span>
+              <span class="footer-follow-icon" id="facebook">
+                <a href="https://www.facebook.com/Kansalliskirjasto/">Facebook</a>
+              </span>
             </li>
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="youtube"><a href="https://www.youtube.com/channel/UCMCKdIT517O4D8o9-lesbvQ/">Youtube</a></span>
+              <span class="footer-follow-icon" id="youtube">
+                <a href="https://www.youtube.com/channel/UCMCKdIT517O4D8o9-lesbvQ/">Youtube</a>
+              </span>
             </li>
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="instagram"><a href="https://instagram.com/kansalliskirjasto/">Instagram</a></span>
+              <span class="footer-follow-icon" id="instagram">
+                <a href="https://instagram.com/kansalliskirjasto/">Instagram</a>
+              </span>
             </li>
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="linked-in"><a href="https://fi.linkedin.com/company/nationallibraryfinland/">LinkedIn</a></span>
+              <span class="footer-follow-icon" id="linked-in">
+                <a href="https://fi.linkedin.com/company/nationallibraryfinland/">LinkedIn</a>
+              </span>
             </li>
           </ul>
         </div>
@@ -256,7 +298,7 @@
         <span>{{ $t('nat_lib') }}</span>
       </div>
       <div id="footer-bottom-link">
-        <a :href="$t('nat_lib_url')">kansalliskirjasto.fi</a>
+        <a target="_blank" :href="$t('nat_lib_url')">kansalliskirjasto.fi</a>
         <img src="static/img/arrow-up-right-from-square-solid.svg" alt="" aria-hidden="true">
       </div>
     </div>
