Change icons to work on mobile

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -217,34 +217,39 @@
           <h4>{{ $t('footer_links_heading') }}</h4>
           <ul class="list-group footer-list">
             <li class="list-group-item">
-              <span aria-hidden="true">🡢</span>
-              <a :href="$t('footer_info_link_url')">
-                {{ $t('footer_info_link') }}
-              </a>
+              <span class="footer-link-arrow">
+                <a :href="$t('footer_info_link_url')">
+                  {{ $t('footer_info_link') }}
+                </a>
+              </span>
             </li>
             <li class="list-group-item">
-              <span aria-hidden="true">🡢</span>
-              <a :href="$t('footer_contact_link_url')">
-                {{ $t('footer_contact_link') }}
-              </a>
+              <span class="footer-link-arrow">
+                <a :href="$t('footer_contact_link_url')">
+                  {{ $t('footer_contact_link') }}
+                </a>
+              </span>
             </li>
             <li class="list-group-item">
-              <span aria-hidden="true">🡢</span>
-              <a :href="$t('feedback_url')">
-                {{ $t('footer_feedback_link') }}
-              </a>
+              <span class="footer-link-arrow">
+                <a :href="$t('feedback_url')">
+                  {{ $t('footer_feedback_link') }}
+                </a>
+              </span>
             </li>
             <li class="list-group-item">
-              <span aria-hidden="true">🡢</span>
-              <a :href="$t('footer_accessibility_link_url')">
-                {{ $t('footer_accessibility_link') }}
-              </a>
+              <span class="footer-link-arrow">
+                <a :href="$t('footer_accessibility_link_url')">
+                  {{ $t('footer_accessibility_link') }}
+                </a>
+              </span>
             </li>
             <li class="list-group-item">
-              <span aria-hidden="true">🡢</span>
-              <a :href="$t('footer_privacy_link_url')">
-                {{ $t('footer_privacy_link') }}
-              </a>
+              <span class="footer-link-arrow">
+                <a :href="$t('footer_privacy_link_url')">
+                  {{ $t('footer_privacy_link') }}
+                </a>
+              </span>
             </li>
           </ul>
         </div>
@@ -286,7 +291,6 @@
           </ul>
         </div>
 
-          
         </div>
 
       </div>
