Use production versions of vue and vue-i18n

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -15,11 +15,11 @@
   <!-- favicon -->
   <link rel="icon" href="favicon.ico">
 
-  <!-- Vue.js -->
-  <script src="static/js/vue.global.min.js"></script>
+  <!-- Vue.js version 3.3.4 -->
+  <script src="static/js/vue.global.prod.js"></script>
 
   <!-- Vue i18n -->
-  <script src="static/js/vue-i18n.global.js"></script>
+  <script src="static/js/vue-i18n.global.prod.js"></script>
 
   <!-- CSS styles -->
   <link rel="stylesheet" href="static/css/style.css" type="text/css">
