--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -31,32 +31,38 @@
 
   <header id="header">
     <div class="container">
-      <h1>
-        <img src="static/img/finto-ai-logo-vaaka.svg" class="img" alt="Finto AI">
-      </h1>
-      <div id="header-nav">
-        <span>
-          <a class="header-nav-link" id="header-nav-finto"
-            :href="$t('finto_url')"
-          >Finto.fi</a>
-        </span>
-        <span>
-          <a class="header-nav-link" id="header-nav-about"
-            :href="$t('about_url')"
-          >{{ $t('header_nav_about') }}</a>
-        </span>
-        <span>
-          <a class="header-nav-link" id="header-nav-feedback"
-            :href="$t('feedback_url')"
-          >{{ $t('header_nav_feedback') }}</a>
-        </span>
-        <span>
-          <a class="header-nav-link" id="header-nav-guide"
-            :href="$t('guide_url')"
-          >{{ $t('header_nav_guide') }}</a>
-        </span>
-        <span> | </span>
-        <switch-locale></switch-locale>
+      <div class="row">
+        <div class="col-3">
+          <h1>
+            <img src="static/img/finto-ai-logo-vaaka.svg" class="img" alt="Finto AI">
+          </h1>
+        </div>
+        <div class="col-lg-9">
+          <div id="header-nav">
+            <span>
+              <a class="header-nav-link" id="header-nav-finto"
+                :href="$t('finto_url')"
+              >Finto.fi</a>
+            </span>
+            <span>
+              <a class="header-nav-link" id="header-nav-about"
+                :href="$t('about_url')"
+              >{{ $t('header_nav_about') }}</a>
+            </span>
+            <span>
+              <a class="header-nav-link" id="header-nav-feedback"
+                :href="$t('feedback_url')"
+              >{{ $t('header_nav_feedback') }}</a>
+            </span>
+            <span>
+              <a class="header-nav-link" id="header-nav-guide"
+                :href="$t('guide_url')"
+              >{{ $t('header_nav_guide') }}</a>
+            </span>
+            <span> | </span>
+            <switch-locale></switch-locale>
+          </div>
+        </div>
       </div>
     </div>
   </header>
@@ -64,7 +70,9 @@
   <main id="main">
 
     <div class="container" id="info">
-      <p>{{ $t('info') }}</p>
+      <div class="row">
+        <p>{{ $t('info') }}</p>
+      </div>
     </div>
 
     <div class="container" id="content">
