Fix suggestions layout on small screens

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -78,7 +78,7 @@
     <div class="container" id="content">
       <div class="row">
 
-        <div class="col-md-7" id="text-box">
+        <div class="col-lg-7" id="text-box">
           <h2>{{ $t('text_box_label') }}</h2>
 
           <div id="tabs-input">
@@ -150,7 +150,7 @@
           <div id="annif-version">{{ $t('annif_version') + annif_version }}</div>
         </div>
 
-        <div class="col-md-5" id="suggestions">
+        <div class="col-lg-5" id="suggestions">
 
           <h3>{{ $t('suggestions_label') }}</h3>
 
