Enlarge link area on to social media logos

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -268,33 +268,43 @@
           <h5 class="footer-follow-heading">{{ $t('footer_follow_heading_finto') }}</h5>
           <ul class="list-group footer-list">
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="twitter">
-                <a href="https://twitter.com/Fintopalvelu/">{{ $t('footer_twitter_link') }}</a>
-              </span>
+              <a href="https://twitter.com/Fintopalvelu/">
+                <span class="footer-follow-icon" id="twitter">
+                {{ $t('footer_twitter_link') }}
+                </span>
+              </a>
             </li>
           </ul>
 
           <h5 class="footer-follow-heading">{{ $t('footer_follow_heading_natlib') }}</h5>
           <ul class="list-group footer-list">
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="facebook">
-                <a href="https://www.facebook.com/Kansalliskirjasto/">Facebook</a>
-              </span>
+              <a href="https://www.facebook.com/Kansalliskirjasto/">
+                <span class="footer-follow-icon" id="facebook">
+                Facebook
+                </span>
+              </a>
             </li>
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="youtube">
-                <a href="https://www.youtube.com/channel/UCMCKdIT517O4D8o9-lesbvQ/">Youtube</a>
-              </span>
+              <a href="https://www.youtube.com/channel/UCMCKdIT517O4D8o9-lesbvQ/">
+                <span class="footer-follow-icon" id="youtube">
+                  Youtube
+                </span>
+              </a>
             </li>
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="instagram">
-                <a href="https://instagram.com/kansalliskirjasto/">Instagram</a>
-              </span>
+              <a href="https://instagram.com/kansalliskirjasto/">
+                <span class="footer-follow-icon" id="instagram">
+                  Instagram
+                </span>
+              </a>
             </li>
             <li class="list-group-item">
-              <span class="footer-follow-icon" id="linked-in">
-                <a href="https://fi.linkedin.com/company/nationallibraryfinland/">LinkedIn</a>
-              </span>
+              <a href="https://fi.linkedin.com/company/nationallibraryfinland/">
+                <span class="footer-follow-icon" id="linked-in">
+                  LinkedIn
+                </span>
+              </a>
             </li>
           </ul>
         </div>
