--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -24,6 +24,18 @@
   <!-- CSS styles -->
   <link rel="stylesheet" href="static/css/style.css" type="text/css">
 
+  <!-- Other metadata -->
+  <meta name="title" content="Finto AI - service for automated subject indexing">
+  <meta name="description" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
+  <meta property="og:title" content="Finto AI - service for automated subject indexing">
+  <meta property="twitter:title" content="Finto AI - service for automated subject indexing">
+  <meta property="og:description" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
+  <meta property="twitterdescription" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://raw.githubusercontent.com/NatLibFi/FintoAI/main/ai.finto.fi/static/img/finto-ai-social.png">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:image" content="https://raw.githubusercontent.com/NatLibFi/FintoAI/main/ai.finto.fi/static/img/finto-ai-social.png">
+
   <title>Finto AI</title>
 </head>
 
