Add link pointing to annif.org to "Powered by Annif vX.Y" element

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -159,7 +159,7 @@
               <span class="visually-hidden">{{ $t('text_box_background') }}</span>
             </div>
           </div>
-          <div id="annif-version">{{ $t('annif_version') + annif_version }}</div>
+          <div id="annif-version">{{ $t('powered_by') }} <a href='https://annif.org'>Annif</a> v{{ annif_version }}</div>
         </div>
 
         <div class="col-lg-5" id="suggestions">
