Add color change effect to logos on hover

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -328,8 +328,10 @@
         </div>
         <div class="col-md-auto ms-auto">
           <div id="footer-bottom-link">
-            <a target="_blank" :href="$t('nat_lib_url')">kansalliskirjasto.fi</a>
-            <img src="static/img/arrow-up-right-from-square-solid.svg" alt="" aria-hidden="true">
+            <a target="_blank" :href="$t('nat_lib_url')">kansalliskirjasto.fi
+            <img src="static/img/arrow-up-right-from-square-solid.svg" alt=""
+            aria-hidden="true">
+            </a>
           </div>
         </div>
       </div>
