Use name instead of property for twitter:card in metatag for Twitter share

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -31,7 +31,7 @@
   <meta property="og:description" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://raw.githubusercontent.com/NatLibFi/FintoAI/main/ai.finto.fi/static/img/finto-ai-social.png">
-  <meta property="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary_large_image">
 
   <title>Finto AI</title>
 </head>
