--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -162,9 +162,9 @@
           <h3>{{ $t('suggestions_label') }}</h3>
 
           <project-select v-model="selected_project" :projects="projects"></project-select>
-          <text-language-select v-model="language"></text-language-select>
+          <text-language-select v-model="text_language"></text-language-select>
           <limit-input v-model="limit"></limit-input><br>
-          <suggestions-language-select v-model="language" :selected-project="selected_project"></suggestions-language-select>
+          <labels-language-select v-model="labels_language" :selected-project="selected_project"></labels-language-select>
 
           <div class="d-grid justify-content-end">
             <button id="get-suggestions" type="button" class="btn btn-primary"
