--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -164,7 +164,7 @@
           <vocab-select v-model="selected_vocab_id" :vocab_ids="vocab_ids"></vocab-select>
           <text-language-select v-model="selected_text_language"></text-language-select>
           <limit-input v-model="limit"></limit-input><br>
-          <labels-language-select v-model="labels_language" :selected-project="selected_project"></labels-language-select>
+          <labels-language-select v-model="labels_language"></labels-language-select>
 
           <div class="d-grid justify-content-end">
             <button id="get-suggestions" type="button" class="btn btn-primary"
