--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -162,9 +162,9 @@
           <h3>{{ $t('suggestions_label') }}</h3>
 
           <vocab-select v-model="selected_vocab_id" :vocab_ids="vocab_ids"></vocab-select>
-          <text-language-select v-model="selected_text_language"></text-language-select>
+          <text-language-select v-model="selected_text_language" :selected_vocab_id="selected_vocab_id"></text-language-select>
           <limit-input v-model="limit"></limit-input><br>
-          <labels-language-select v-model="labels_language"></labels-language-select>
+          <labels-language-select v-model="labels_language" :selected_vocab_id="selected_vocab_id"></labels-language-select>
 
           <div class="d-grid justify-content-end">
             <button id="get-suggestions" type="button" class="btn btn-primary"
