--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -163,6 +163,7 @@
 
           <vocab-select v-model="selected_vocab_id" :vocab_ids="vocab_ids"></vocab-select>
           <text-language-select v-model="text_language" :selected_vocab_id="selected_vocab_id" :detecting_language="detecting_language"></text-language-select>
+          <input type="checkbox" id="checkbox" v-model="disable_language_detection" /> {{ $t('disable_language_detection') }}
           <limit-input v-model="limit"></limit-input><br>
           <labels-language-select v-model="labels_language" :selected_vocab_id="selected_vocab_id"></labels-language-select>
 
