Fix language codes that are copied to clipboard

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -194,9 +194,9 @@
 
             <result-list
               :results="results"
-              :language="language"
-              :selected_project="selected_project"
-              :projects="projects"
+              :selected_vocab_id="selected_vocab_id"
+              :text_language="text_language"
+              :labels_language="labels_language"
             ></result-list>
           </div>
 
